--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=0" />
     <title>contact</title>
     <!-- 此处插入css代码 或 相应链接-->
     <link rel="stylesheet" type="text/css" href="./css/website.css" />
