--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,user-scalable=0"
+    />
     <title>个人网页(终版)</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
