--- a/introduce.html
+++ b/introduce.html
@@ -12,7 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0"
+      content="width=device-width, initial-scale=1.0,user-scalable=0"
     />
     <title>个人简介</title>
     <style>
@@ -27,7 +27,7 @@
       }
       .introduce {
         display: flex;
-        width: 1000px;
+        width: 100%;
         position: relative;
         top: 100px;
         background-image: url(./img/);
@@ -63,7 +63,7 @@
         color: ;
         text-align: center;
         letter-spacing: 2px;
-        font-weight: 700;
+        font-weight: 500;
       }
       .axis:nth-child(even) .left {
         background-color: orange;
@@ -134,7 +134,6 @@
             疫情居家学习<br />
             2021-2022<br />
             生命掀开新页<br />
-            <br />
             考入中国传媒大学
           </div>
         </div>
