--- a/introduce.html
+++ b/introduce.html
@@ -31,6 +31,8 @@
         position: relative;
         top: 100px;
         background-image: url(./img/);
+        justify-content: center;
+        align-items: center;
       }
       .introduce::after {
         content: " ";
