--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=0" />
-    <title>contact</title>
+    <title>联系本人</title>
     <!-- 此处插入css代码 或 相应链接-->
     <link rel="stylesheet" type="text/css" href="./css/website.css" />
   </head>
@@ -33,7 +33,7 @@
       />
       <p>↑这个傻子↑<br />叫 <em>废厨小王子</em>。</p>
       <p style="letter-spacing: 2px;font-weight: 500;font-size: 18px;">他心中的万千梦想，<br /></p>
-      <p style="font-size: larger;letter-spacing: 6px;"><strong>都在等有缘人出现。</strong></p>
+      <p style="font-weight: 545;font-size:20px;letter-spacing: 5px;">都在等有缘人出现。</p>
     </header>
 
     <!-- 第二个：正文盒子（段落） -->
