--- a/hobby.html
+++ b/hobby.html
@@ -56,7 +56,7 @@
               <img src="./img/qin.png" alt="" />
             </div>
             <div class="hobby-text">
-              <h3>退堂鼓二级表演艺术家，五音不全患者</h3>
+              <h3>退堂鼓二级表演艺术家，五音不全人士</h3>
               <p>手鼓，口哨，唢呐</p>
             </div>
           </li>
@@ -74,8 +74,8 @@
               <img src="./img/shu.png" alt="" />
             </div>
             <div class="hobby-text">
-              <h3>资深段子手小黄文质检员，现挨踢萌新宝宝</h3>
-              <p>看小说 学编程（python，html css ）</p>
+              <h3>前资深段子手小黄文质检员，小镇做题家，现挨踢萌新宝宝</h3>
+              <p>看小说 学编程（python，html&css ）</p>
             </div>
           </li>
           <li>
@@ -84,7 +84,7 @@
             </div>
             <div class="hobby-text">
               <h3>动漫涩图审核兼亚文化研究员</h3>
-              <p>看漫画和动画片（东百往事，韩金轮，）</p>
+              <p>看漫画和动画片（加菲猫，东百往事，韩金轮，）</p>
             </div>
           </li>
           <li>
@@ -92,8 +92,8 @@
               <img src="./img/bai.png" alt="" />
             </div>
             <div class="hobby-text">
-              <h3>现役电子竞技铜牌解说金牌厨师</h3>
-              <p>lol手游，ra2，MC</p>
+              <h3>现役电子竞技铜牌解说金牌厨师，现实生活交流轻度障碍患者</h3>
+              <p>lol手游，ra2，4399</p>
             </div>
           </li>
           <li>
