--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0,user-scalable=0"
     />
-    <title>个人网页(终版)</title>
+    <title>废厨小王子的窝点</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
