--- a/introduce.html
+++ b/introduce.html
@@ -46,7 +46,7 @@
       }
       .axis {
         width: 100%;
-        height: 150px;
+        height: 155px;
         margin-top: 10px;
         margin-bottom: 80px;
         display: flex;
@@ -59,7 +59,7 @@
       .right {
         position: relative;
         width: 40%;
-        height: 120px;
+        height: 130px;
         /* background-color: orange; */
         border-radius: 15px;
         color: ;
@@ -134,6 +134,7 @@
           <div class="right">
             2022-<br />
             疫情居家学习<br />
+            <br />
             2021-2022<br />
             生命掀开新页<br />
             考入中国传媒大学
@@ -144,7 +145,10 @@
           <div class="left">
             2020-2021<br />
             继续在河北衡水中学深造学习<br />
-            无
+            <br />
+            <br />
+            五味杂陈 人生如梦
+
             <!-- 今年我20岁
 终于生命掀开新页
 尘归尘 土归土
@@ -174,6 +178,9 @@
           <div class="right">
             2017-2020<br />
             就读于河北衡水中学<br />
+            <br />
+            校园里的叛逆者<br />
+            从清北预备役 到班级吊车尾
             <!-- 【1】
 今年我19岁
 复读
@@ -212,6 +219,9 @@
           <div class="left">
             2014-2017<br />
             就读于河北昌黎第五中学<br />
+            <br />
+            曾经的天之骄子<br />
+            年轻气盛 少不经事
             <!-- 【1】
  今年我15岁
 初中毕业啦
@@ -256,7 +266,10 @@
           </div>
           <div class="right">
             2002-2014 <br />
-            -----------------------------------------无忧无虑的童年时光------------------------
+
+            拖着鼻涕 散着鞋带疯跑的小男孩<br />
+            <br />
+            -----------------------------------无忧无虑的童年时光-----------------------------------<br />
             <br />
 
             <!-- 【3】
