--- a/video/100day.html
+++ b/video/100day.html
@@ -32,8 +32,10 @@
             <div class="text">
               <h3>【大怪物的千日养成计划】100天</h3>
               <p>
-                2022年1月1日，突发奇想地启动该项目。<br>
-                希望我的大学生涯不会令人失望
+                2022年1月1日，突发奇想启动项目。<br>
+                <br>
+                <strong>养成系列带你们见证一个小男孩的成长道路，也希望可以帮到敢想敢做的少年们，这是我的初心和梦想。</strong>
+
 
               </p>
             </div>
