--- a/video/moban.html
+++ b/video/moban.html
@@ -30,9 +30,9 @@
         <ul>
           <li>
             <div class="text">
-              <h3>北京冬奥会短道速滑2000米混合团体接力决赛（解说重置版）</h3>
+              <h3>这是作品的标题</h3>
               <p>
-                简介：
+                这里是作品的内容简介这里是作品的内容简介这里是作品的内容简介
               </p>
             </div>
           </li>
@@ -48,13 +48,9 @@
 
           <li>
             <div class="sum">
-              <h3>后记</h3>
+              <h3>这是作品的评价</h3>
               <p>
-                从高考之后就开始准备体育解说赛事解说。<br>
-                放寒假后开始准备素材，比赛当晚看完后通宵配完。<br>
-                版权问题，无法在视频网站上播放，故传到个人网站上，<br>
-                祝贺中国冰雪运动与奥运健儿再创佳绩，纪念那一段在陌生地带苦苦探索的时光。<br>
-                业余爱好，水平有限，能力一般，多多指教。<br>
+                这里是作品的评价这里是作品的评价这里是作品的评价
               </p>
             </div>
           </li>
