--- a/video/personweb.html
+++ b/video/personweb.html
@@ -35,7 +35,8 @@
                 【该视频资源未上线，敬请期待。】<br>
                 本人大一，在互联网上朋友们帮助与分享的基础上，利用一点python语法基础和大量的时间精力投入，终于在网络空间画下了自己的一片地盘。<br>
                 从0到1，从入门到入土，本视频手把手带你建立自己的网络天地，绕过当年我走的弯路和雷区。<br>
-                攻略系列带你们见证一个小男孩的成长道路，希望可以帮到敢想敢做的少年们，这也是我的初心和梦想。
+                <br>
+                <strong>攻略系列带你们见证一个小男孩的成长道路，也希望可以帮到敢想敢做的少年们，这也是我的初心和梦想。</strong>
               </p>
             </div>
           </li>
