--- a/works.html
+++ b/works.html
@@ -55,7 +55,9 @@
     <div class="box-1">
       <div class="public-width">
         <div class="box-1-title">
-          <h3>荣誉墙&作品集</h3>
+          <h3>
+            荣誉墙&作品集(github上不能传视频，详情请见loveprince.cn(建设中))
+          </h3>
         </div>
         <div class="box-1-list">
           <ul>
@@ -93,7 +95,7 @@
               </div>
               <div class="box-1-list-text">
                 <div class="box-1-t-l">
-                  <p>业余健身100天</p>
+                  <p>千日养成计划·100天</p>
                   <span>2022-04-11</span>
                 </div>
                 <div class="box-1-t-r">
@@ -128,7 +130,7 @@
             style="color: orange"
             >友情链接</a
           >
-          &emsp;&emsp;记得保密！记得三连！
+          &emsp;&emsp;嘿嘿嘿...&emsp;记得保密！记得三连！
         </p>
       </div>
     </div>
